Fix  0 value Repeat issues

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <p>Simple JS Calculater</p>
+    <p>- Simple Calculater -</p>
 
     <div class="calculator">
         <div class="calculator__output" id="display">0</div>
@@ -35,9 +35,6 @@
           <button class="calculator__key calculator__key--enter" id="nEQ" onclick=fnEQ()>=</button>
         </div>
       </div>
-
-
-    
 
 
     <script src="script.js"></script>
